@@ -14,19 +14,15 @@ import org.junit.Test;
  */
 public class CharacterConverterTest {
 
-	@Test
-	public void toConvert() {
-		CharacterConverter characterConverter = new CharacterConverter();
+    @Test
+    public void toConvert() {
+        CharacterConverter characterConverter = new CharacterConverter();
 
-		assertEquals(Character.valueOf((char) 1),
-				characterConverter.toConvert(Character.valueOf((char) 1)));
-		assertEquals(Character.valueOf((char) 1),
-				characterConverter.toConvert(Integer.valueOf(1)));
-		assertEquals(Character.valueOf((char) 1),
-				characterConverter.toConvert(Short.valueOf((short) 1)));
-		assertEquals(Character.valueOf((char) 1),
-				characterConverter.toConvert(Double.valueOf(1.0D)));
-		assertEquals(new Character('1'), characterConverter.toConvert("1"));
+        assertEquals(Character.valueOf((char) 1), characterConverter.toConvert(Character.valueOf((char) 1)));
+        assertEquals(Character.valueOf((char) 1), characterConverter.toConvert(Integer.valueOf(1)));
+        assertEquals(Character.valueOf((char) 1), characterConverter.toConvert(Short.valueOf((short) 1)));
+        assertEquals(Character.valueOf((char) 1), characterConverter.toConvert(Double.valueOf(1.0D)));
+        assertEquals(new Character('1'), characterConverter.toConvert("1"));
 
-	}
+    }
 }
